Fixed footer spacing to fit more links

--- a/style.css
+++ b/style.css
@@ -80,7 +80,8 @@ textarea {
 }
 
 footer {
-    text-align: center;
+    display: flex;
+    justify-content: space-evenly;
 }
 
 @media screen and (min-width: 600px) {
